@@ -24,8 +24,7 @@ import io.micronaut.context.exceptions.DependencyInjectionException;
 import io.micronaut.context.scope.CustomScope;
 import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.Internal;
-import io.micronaut.core.annotation.NonNull;
-import io.micronaut.core.annotation.Nullable;
+import org.jspecify.annotations.Nullable;
 import io.micronaut.core.bind.annotation.Bindable;
 import io.micronaut.core.convert.ArgumentConversionContext;
 import io.micronaut.core.convert.ConversionContext;
@@ -57,16 +56,23 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
 
     private static final String CONSTRUCTOR_METHOD_NAME = "<init>";
     protected final DefaultBeanContext context;
+    @Nullable
     protected final BeanDefinition<?> rootDefinition;
     protected final Path path;
     @Nullable
     private final BeanResolutionTracer tracer;
+    @Nullable
     private Map<CharSequence, Object> attributes;
+    @Nullable
     private Qualifier<?> qualifier;
+    @Nullable
     private List<BeanRegistration<?>> dependentBeans;
+    @Nullable
     private BeanRegistration<?> dependentFactory;
+    @Nullable
     private final PropertyResolver propertyResolver;
 
+    @Nullable
     private ConfigurationPath configurationPath;
 
     /**
@@ -74,7 +80,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
      * @param rootDefinition The bean root definition
      */
     @Internal
-    protected AbstractBeanResolutionContext(DefaultBeanContext context, BeanDefinition<?> rootDefinition) {
+    protected AbstractBeanResolutionContext(DefaultBeanContext context, @Nullable BeanDefinition<?> rootDefinition) {
         this.context = context;
         this.rootDefinition = rootDefinition;
         this.path = new DefaultPath();
@@ -99,6 +105,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
+    @Nullable
     public PropertyResolver getPropertyResolver() {
         return propertyResolver;
     }
@@ -114,14 +121,15 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
-    public ConfigurationPath setConfigurationPath(ConfigurationPath configurationPath) {
+    @Nullable
+    public ConfigurationPath setConfigurationPath(@Nullable ConfigurationPath configurationPath) {
         ConfigurationPath old = this.configurationPath;
         this.configurationPath = configurationPath;
         return old;
     }
 
     @Override
-    public void valueResolved(Argument<?> argument, Qualifier<?> qualifier, String property, Object value) {
+    public void valueResolved(Argument<?> argument, @Nullable Qualifier<?> qualifier, String property, @Nullable Object value) {
         if (tracer != null) {
             tracer.traceValueResolved(
                 this,
@@ -132,12 +140,13 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
     }
 
-    private boolean isTraceEnabled(@NonNull String typeName, @NonNull Set<String> tracePatterns) {
+    private boolean isTraceEnabled(String typeName, Set<String> tracePatterns) {
         return (tracePatterns.isEmpty() || tracePatterns.stream().anyMatch(typeName::matches));
     }
 
     @Override
-    public Object resolvePropertyValue(Argument<?> argument, String stringValue, String cliProperty, boolean isPlaceholder) {
+    @Nullable
+    public Object resolvePropertyValue(Argument<?> argument, String stringValue, @Nullable String cliProperty, boolean isPlaceholder) {
         ApplicationContext applicationContext = (ApplicationContext) context;
 
         Argument<?> argumentType = argument;
@@ -222,9 +231,8 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         return valString;
     }
 
-    @NonNull
     @Override
-    public <T> T getBean(@NonNull Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
+    public <T> T getBean(Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
         T bean = context.getBean(this, beanType, qualifier);
         if (tracer != null) {
             tracer.traceBeanResolved(
@@ -251,7 +259,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
-    public <T> T getBean(Class<T> beanType, Qualifier<T> qualifier) {
+    public <T> T getBean(Class<T> beanType, @Nullable Qualifier<T> qualifier) {
         return getBean(Argument.of(beanType), qualifier);
     }
 
@@ -260,9 +268,8 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         return context.getBean(definition);
     }
 
-    @NonNull
     @Override
-    public <T> Collection<T> getBeansOfType(@NonNull Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
+    public <T> Collection<T> getBeansOfType(Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
         Collection<T> beans = context.getBeansOfType(this, beanType, qualifier);
         if (tracer != null) {
             traceBeanCollection(beanType, qualifier, beans);
@@ -276,11 +283,12 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
-    public <T> Collection<T> getBeansOfType(Class<T> beanType, Qualifier<T> qualifier) {
+    public <T> Collection<T> getBeansOfType(Class<T> beanType, @Nullable Qualifier<T> qualifier) {
         return getBeansOfType(Argument.of(beanType), qualifier);
     }
 
-    private <T> void traceBeanCollection(Argument<T> beanType, Qualifier<T> qualifier, Collection<T> beans) {
+    private <T> void traceBeanCollection(Argument<T> beanType, @Nullable Qualifier<T> qualifier, Collection<T> beans) {
+        Objects.requireNonNull(tracer);
         for (T bean : beans) {
             tracer.traceBeanResolved(this, beanType, qualifier, bean);
         }
@@ -299,19 +307,18 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
     }
 
-    @NonNull
     @Override
-    public <T> Stream<T> streamOfType(@NonNull Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
+    public <T> Stream<T> streamOfType(Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
         return context.streamOfType(this, beanType, qualifier);
     }
 
     @Override
-    public <T> Stream<T> streamOfType(Class<T> beanType, Qualifier<T> qualifier) {
+    public <T> Stream<T> streamOfType(Class<T> beanType, @Nullable Qualifier<T> qualifier) {
         return streamOfType(Argument.of(beanType), qualifier);
     }
 
     @Override
-    public <V> Map<String, V> mapOfType(Argument<V> beanType, Qualifier<V> qualifier) {
+    public <V> Map<String, V> mapOfType(Argument<V> beanType, @Nullable Qualifier<V> qualifier) {
         Map<String, V> beanMap = context.mapOfType(this, beanType, qualifier);
         if (tracer != null) {
             traceBeanCollection(beanType, qualifier, beanMap.values());
@@ -319,9 +326,8 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         return beanMap;
     }
 
-    @NonNull
     @Override
-    public <T> Optional<T> findBean(@NonNull Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
+    public <T> Optional<T> findBean(Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
         Optional<T> resolved = context.findBean(this, beanType, qualifier);
         if (tracer != null) {
             tracer.traceBeanResolved(
@@ -348,7 +354,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
-    public <T> Optional<T> findBean(Class<T> beanType, Qualifier<T> qualifier) {
+    public <T> Optional<T> findBean(Class<T> beanType, @Nullable Qualifier<T> qualifier) {
         return findBean(Argument.of(beanType), qualifier);
     }
 
@@ -358,13 +364,12 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
-    public <T> T getProxyTargetBean(Class<T> beanType, Qualifier<T> qualifier) {
+    public <T> T getProxyTargetBean(Class<T> beanType, @Nullable Qualifier<T> qualifier) {
         return context.getProxyTargetBean(this, Argument.of(beanType), qualifier);
     }
 
-    @NonNull
     @Override
-    public <T> Collection<BeanRegistration<T>> getBeanRegistrations(@NonNull Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
+    public <T> Collection<BeanRegistration<T>> getBeanRegistrations(Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
         Collection<BeanRegistration<T>> registrations = context.getBeanRegistrations(this, beanType, qualifier);
         if (tracer != null) {
             traceBeanCollection(
@@ -381,7 +386,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
      *
      * @param context The previous context
      */
-    public void copyStateFrom(@NonNull AbstractBeanResolutionContext context) {
+    public void copyStateFrom(AbstractBeanResolutionContext context) {
         path.addAll(context.path);
         qualifier = context.qualifier;
         if (context.attributes != null) {
@@ -411,7 +416,6 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
     }
 
-    @NonNull
     @Override
     public List<BeanRegistration<?>> getAndResetDependentBeans() {
         if (dependentBeans == null) {
@@ -431,11 +435,12 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
             if (dependentBeans.size() != 1) {
                 throw new IllegalStateException("Expected only one bean dependent!");
             }
-            dependentFactory = dependentBeans.remove(0);
+            dependentFactory = dependentBeans.removeFirst();
         }
     }
 
     @Override
+    @Nullable
     public BeanRegistration<?> getAndResetDependentFactoryBean() {
         BeanRegistration<?> result = this.dependentFactory;
         this.dependentFactory = null;
@@ -443,6 +448,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
+    @Nullable
     public List<BeanRegistration<?>> popDependentBeans() {
         List<BeanRegistration<?>> result = this.dependentBeans;
         this.dependentBeans = null;
@@ -450,7 +456,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
-    public void pushDependentBeans(List<BeanRegistration<?>> dependentBeans) {
+    public void pushDependentBeans(@Nullable List<BeanRegistration<?>> dependentBeans) {
         if (this.dependentBeans != null && !this.dependentBeans.isEmpty()) {
             throw new IllegalStateException("Found existing dependent beans!");
         }
@@ -463,6 +469,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
+    @Nullable
     public final BeanDefinition getRootDefinition() {
         return rootDefinition;
     }
@@ -473,7 +480,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
-    public final Object setAttribute(CharSequence key, Object value) {
+    public final Object setAttribute(CharSequence key, @Nullable Object value) {
         return getAttributesOrCreate().put(key, value);
     }
 
@@ -482,6 +489,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
      * @return The attribute value
      */
     @Override
+    @Nullable
     public final Object getAttribute(CharSequence key) {
         if (attributes == null) {
             return null;
@@ -490,6 +498,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
+    @Nullable
     public final Object removeAttribute(CharSequence key) {
         if (attributes != null && key != null) {
             return attributes.remove(key);
@@ -498,12 +507,13 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
     }
 
     @Override
+    @Nullable
     public Map<CharSequence, Object> getAttributes() {
         return attributes;
     }
 
     @Override
-    public void setAttributes(Map<CharSequence, Object> attributes) {
+    public void setAttributes(@Nullable Map<CharSequence, Object> attributes) {
         this.attributes = attributes;
     }
 
@@ -542,7 +552,6 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         return Optional.empty();
     }
 
-    @NonNull
     private Map<CharSequence, Object> getAttributesOrCreate() {
         if (attributes == null) {
             attributes = new LinkedHashMap<>(2);
@@ -550,16 +559,16 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         return attributes;
     }
 
-    public final <T> Collection<BeanDefinition<T>> findBeanDefinitions(@NonNull Argument<T> argument, BeanDefinition<?> bd) {
+    public final <T> Collection<BeanDefinition<T>> findBeanDefinitions(Argument<T> argument, @Nullable BeanDefinition<?> bd) {
         return context.findBeanCandidates(this, argument, bd);
     }
 
-    public final <T> BeanRegistration<T> getBeanRegistration(Argument<T> argument, Qualifier<T> qualifier) {
+    public final <T> BeanRegistration<T> getBeanRegistration(Argument<T> argument, @Nullable Qualifier<T> qualifier) {
         return context.getBeanRegistration(this, argument, qualifier);
     }
 
     @Override
-    public <T> T getProxyTargetBean(BeanDefinition<T> definition, Argument<T> beanType, Qualifier<T> qualifier) {
+    public <T> T getProxyTargetBean(BeanDefinition<T> definition, Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
         return context.getProxyTargetBean(this, definition, beanType, qualifier);
     }
 
@@ -583,7 +592,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
 
             String spaces = "";
             while (i.hasNext()) {
-                pathString.append(i.next().toString());
+                pathString.append(i.next());
                 if (i.hasNext()) {
                     pathString
                         .append(ls)
@@ -859,7 +868,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
 
         @Override
         public void close() {
-            if (tracer != null) {
+            if (tracer != null && rootDefinition != null) {
                 if (isEmpty()) {
                     tracer.traceBeanCreated(
                         AbstractBeanResolutionContext.this,
@@ -883,7 +892,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
      * A segment that represents a method argument.
      */
     public static final class ConstructorArgumentSegment extends ConstructorSegment implements ArgumentInjectionPoint<Object, Object> {
-        public ConstructorArgumentSegment(BeanDefinition<Object> declaringType, Qualifier<Object> qualifier, String methodName, Argument<Object> argument, Argument<Object>[] arguments) {
+        public ConstructorArgumentSegment(BeanDefinition<Object> declaringType, @Nullable Qualifier<Object> qualifier, String methodName, Argument<Object> argument, Argument<Object>[] arguments) {
             super(declaringType, qualifier, methodName, argument, arguments);
         }
 
@@ -893,6 +902,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
 
         @Override
+        @Nullable
         public Qualifier<Object> getDeclaringBeanQualifier() {
             return getDeclaringTypeQualifier();
         }
@@ -915,7 +925,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
          * @param argument                The argument
          * @param arguments               The arguments
          */
-        ConstructorSegment(BeanDefinition<Object> declaringBeanDefinition, Qualifier<Object> qualifier, String methodName, Argument<Object> argument, Argument<Object>[] arguments) {
+        ConstructorSegment(BeanDefinition<Object> declaringBeanDefinition, @Nullable Qualifier<Object> qualifier, String methodName, Argument<Object> argument, Argument<Object>[] arguments) {
             super(declaringBeanDefinition, qualifier, declaringBeanDefinition.getBeanType().getName(), argument);
             this.methodName = methodName;
             this.arguments = arguments;
@@ -926,7 +936,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
             return toConsoleString(false);
         }
 
-        @NonNull
+        @Override
         public String toConsoleString(boolean ansiSupported) {
             StringBuilder baseString;
             BeanDefinition<Object> declaringType = getDeclaringType();
@@ -965,7 +975,6 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
             return this;
         }
 
-        @NonNull
         @Override
         public CallableInjectionPoint<Object> getOuterInjectionPoint() {
             return getDeclaringType().getConstructor();
@@ -977,6 +986,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
 
         @Override
+        @Nullable
         public Qualifier<Object> getDeclaringBeanQualifier() {
             return ConstructorSegment.this.getDeclaringTypeQualifier();
         }
@@ -992,14 +1002,15 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
      * A segment that represents a method argument.
      */
     public static final class MethodArgumentSegment extends MethodSegment<Object, Object> implements ArgumentInjectionPoint<Object, Object> {
+        @Nullable
         private final MethodSegment<Object, Object> outer;
 
         public MethodArgumentSegment(BeanDefinition<Object> declaringType,
-                                     Qualifier<Object> qualifier,
+                                     @Nullable Qualifier<Object> qualifier,
                                      String methodName,
                                      Argument<Object> argument,
                                      Argument<Object>[] arguments,
-                                     MethodSegment<Object, Object> outer) {
+                                     @Nullable MethodSegment<Object, Object> outer) {
             super(declaringType, qualifier, methodName, argument, arguments);
             this.outer = outer;
         }
@@ -1102,7 +1113,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
          * @param argument      The argument
          * @param arguments     The arguments
          */
-        MethodSegment(BeanDefinition<B> declaringType, Qualifier<B> qualifier, String methodName, Argument<T> argument, Argument<Object>[] arguments) {
+        MethodSegment(BeanDefinition<B> declaringType, @Nullable Qualifier<B> qualifier, String methodName, Argument<T> argument, Argument<Object>[] arguments) {
             super(declaringType, qualifier, methodName, argument);
             this.arguments = arguments;
         }
@@ -1147,6 +1158,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
 
         @Override
+        @Nullable
         public Qualifier<B> getDeclaringBeanQualifier() {
             return getDeclaringTypeQualifier();
         }
@@ -1162,7 +1174,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
          * @param qualifier      The qualifier
          * @param argument       The argument
          */
-        FieldSegment(BeanDefinition<B> declaringClass, Qualifier<B> qualifier, Argument<T> argument) {
+        FieldSegment(BeanDefinition<B> declaringClass, @Nullable Qualifier<B> qualifier, Argument<T> argument) {
             super(declaringClass, qualifier, argument.getName(), argument);
         }
 
@@ -1211,6 +1223,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
 
         @Override
+        @Nullable
         public Qualifier<B> getDeclaringBeanQualifier() {
             return getDeclaringTypeQualifier();
         }
@@ -1228,7 +1241,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
          * @param qualifier      The qualifier
          * @param argument       The argument
          */
-        AnnotationSegment(BeanDefinition<B> beanDefinition, Qualifier<B> qualifier, Argument<B> argument) {
+        AnnotationSegment(BeanDefinition<B> beanDefinition, @Nullable Qualifier<B> qualifier, Argument<B> argument) {
             super(beanDefinition, qualifier, argument.getName(), argument);
         }
 
@@ -1253,6 +1266,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
 
         @Override
+        @Nullable
         public Qualifier<B> getDeclaringBeanQualifier() {
             return getDeclaringTypeQualifier();
         }
@@ -1280,7 +1294,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
          * @param name           The name
          * @param argument       The argument
          */
-        AbstractSegment(BeanDefinition<B> declaringClass, Qualifier<B> qualifier, String name, Argument<T> argument) {
+        AbstractSegment(BeanDefinition<B> declaringClass, @Nullable Qualifier<B> qualifier, String name, Argument<T> argument) {
             this.declaringComponent = declaringClass;
             this.qualifier = qualifier;
             this.name = name;
@@ -1324,6 +1338,7 @@ public abstract class AbstractBeanResolutionContext implements BeanResolutionCon
         }
 
         @Override
+        @Nullable
         public Qualifier<B> getDeclaringTypeQualifier() {
             return qualifier == null ? declaringComponent.getDeclaredQualifier() : qualifier;
         }
